--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ derive_builder = "0.12.0"
 thiserror = "1.0.24"
 svg = "0.13.0"
 derive_more = "0.99.17"
+chumsky = "0.8.0"
 
 [dev-dependencies]
 difference = "2.0"
