--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ edition = "2021"
 svg = "0.13.0"
 chumsky = "0.8.0"
 ariadne = "0.1.5"
+thiserror = "1.0.24"
 derive_builder = "0.12.0"
 derive_more = "0.99.17"
-thiserror = "1.0.24"
+smallvec = "1.10.0"
 
 [dev-dependencies]
 difference = "2.0"
