--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ thiserror = "1.0.24"
 derive_builder = "0.12.0"
 derive_more = "0.99.17"
 smallvec = "1.10.0"
+petgraph = "0.6.2"
 
 [dev-dependencies]
 difference = "2.0"
